# vector-multiplication

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  homework05.html
scripts/: run_local.sh  run_pleiades.sh  run_tests.sh
src/: main.c
